# replica

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  alembic.ini  download_model.sh  pyproject.toml  serve.sh  test_api.py  test_embedding.py
.cursor/rules/: replica.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
alembic/: env.py
alembic/versions/: 0b5e0e1353d2_add_user_name_column.py  60a8400fe0ae_add_session_ended_at_and_message_.py  70291a72832b_rename_ended_at_to_last_extraction_at.py  7889627f0335_remove_last_extraction_at_field.py  7c95e7f38baa_initial.py  a1b2c3d4e5f6_remove_group_and_unused_models.py  f509baaeb1b9_unified_memory_architecture.py
benchmarks/locomo/: README.md  compare.py  evaluate.py  ingest.py  metrics.py  run_benchmark.sh
benchmarks/locomo/data/: results_event_top10.json  results_foresight_top10.json  results_top25.json  user_mapping.json
config/: settings.yaml
docs/: api.md  blueprint-architecture.html  blueprint-engineering.html  blueprint-memory.html  guide.md
src/replica/: config.py  main.py
src/replica/api/: admin.py  chat.py  config.py  memorize.py  memory.py  (+4 more)
tests/: test_chunking.py  test_compaction.py  test_config.py  test_db.py  test_embedding_service.py  test_extractors.py  test_memory_service.py  test_prompts.py  test_providers.py  test_retrieval_utils.py  test_schemas.py
web/: biome.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  index.css  main.tsx  router.tsx  style.css
(+95 files in other folders)
